<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleYearFilterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_year"
        style="@style/Title1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year_hint"
        app:layout_constraintTop_toBottomOf="@+id/titleYearFilterTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/titleCountriesFilterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_countries"
        style="@style/Title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearEditText"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/countriesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_hint"
        app:layout_constraintTop_toBottomOf="@+id/titleCountriesFilterTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/titleAgeRatingFilterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_rating"
        style="@style/Title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countriesEditText"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/ageRatingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint"
        app:layout_constraintTop_toBottomOf="@+id/titleAgeRatingFilterTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>