<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/authorReviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/Title1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/titleReviewFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            style="@style/Title2"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/authorReviewTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/typeReviewFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            style="@style/Title3"
            app:layout_constraintTop_toBottomOf="@+id/titleReviewFilmTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/reviewFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            style="@style/Title2"
            app:layout_constraintTop_toBottomOf="@+id/typeReviewFilmTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/dateFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/Title3"
            app:layout_constraintTop_toBottomOf="@+id/reviewFilmTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/retry_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>