<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/filmView"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_film_text_view"
            style="@style/Title1"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/filmView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/yearFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_film_year"
            style="@style/Title2"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/nameFilmTextView"
            app:layout_constraintStart_toEndOf="@+id/filmView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/countryFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/Title3"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/yearFilmTextView"
            app:layout_constraintStart_toEndOf="@+id/filmView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/genreFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/Title3"
            android:paddingEnd="150dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/countryFilmTextView"
            app:layout_constraintStart_toEndOf="@+id/filmView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/ageRatingFilmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_rating_film"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/Title3"
            app:layout_constraintTop_toBottomOf="@+id/genreFilmTextView"
            app:layout_constraintStart_toEndOf="@+id/filmView"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/retry_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>