<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backButton">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/filmView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/light_gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/nameFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_film_text_view"
                        style="@style/DetailsTitle1"
                        app:layout_constraintTop_toBottomOf="@+id/filmView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/descriptionFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        style="@style/Title2"
                        android:paddingEnd="20dp"
                        android:paddingStart="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/nameFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/seasonsTitleFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seasons_series"
                        style="@style/DetailsTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/seasonsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/seasonsTitleFilmTextView"/>

                    <TextView
                        android:id="@+id/postersTitleFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posters"
                        style="@style/DetailsTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/seasonsRecyclerView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/posterRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/postersTitleFilmTextView"/>

                    <TextView
                        android:id="@+id/ratingTitleFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        style="@style/DetailsTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/ratingKpFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        style="@style/Title2"
                        app:layout_constraintTop_toBottomOf="@+id/ratingTitleFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/ratingImdbFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        style="@style/Title2"
                        app:layout_constraintTop_toBottomOf="@+id/ratingKpFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/ratingFilmCriticsFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        style="@style/Title2"
                        app:layout_constraintTop_toBottomOf="@+id/ratingImdbFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/ratingRussianFilmCriticsFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        style="@style/Title2"
                        app:layout_constraintTop_toBottomOf="@+id/ratingFilmCriticsFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/personsTitleFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors"
                        style="@style/DetailsTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/ratingRussianFilmCriticsFilmTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/personsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/personsTitleFilmTextView"/>

                    <TextView
                        android:id="@+id/reviewsTitleFilmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        style="@style/DetailsTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/personsRecyclerView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reviewsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/reviewsTitleFilmTextView"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/errorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_text"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/retryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/retry_button"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@+id/errorTextView"
                        app:layout_constraintStart_toStartOf="@+id/errorTextView"
                        app:layout_constraintTop_toBottomOf="@+id/errorTextView"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>